Subindo exercicio02 de repetção

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Torloni</title>
     <link rel="stylesheet" href="style.css">
 
-    <script src="exercicio08.js"></script>
+    <!-- <script src="exercicio08.js"></script> -->
+
+<!-- <script src="Esrutura de repetição/for.js"></script> -->
+ <script src="Esrutura de repetição/exercicio02.js"></script>
 
 </head>
 
