--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <!-- <script src="exercicio08.js"></script> -->
 
 <!-- <script src="Esrutura de repetição/for.js"></script> -->
- <script src="Esrutura de repetição/exercicio02.js"></script>
+ <!-- <script src="./Esrutura de repetição/exercicio02.js"></script> -->
+ <!-- <script src="./Esrutura de repetição/exercicio03.js"></script> -->
+<!-- <script src="./Esrutura de repetição/while.js"></script> -->
+ <!-- <script src="./Esrutura de repetição/exercicio05.js"></script> -->
+  <!-- <script src="./Esrutura de repetição/exercicio06.js"></script>-->
+  <!-- <script src="./Esrutura de repetição/exercicio07.js"></script> -->
+  <!-- <script src="./Esrutura de repetição/exercicio08.js"></script> -->
+   <!-- <script src="./Esrutura de repetição/exercicio09.js"></script> -->
+    <script src="./Arrey/arrey.js"></script>
+
 
 </head>
 
