--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +9,19 @@
 
     <!-- <script src="exercicio08.js"></script> -->
 
-<!-- <script src="Esrutura de repetição/for.js"></script> -->
- <!-- <script src="./Esrutura de repetição/exercicio02.js"></script> -->
- <!-- <script src="./Esrutura de repetição/exercicio03.js"></script> -->
-<!-- <script src="./Esrutura de repetição/while.js"></script> -->
- <!-- <script src="./Esrutura de repetição/exercicio05.js"></script> -->
-  <!-- <script src="./Esrutura de repetição/exercicio06.js"></script>-->
-  <!-- <script src="./Esrutura de repetição/exercicio07.js"></script> -->
-  <!-- <script src="./Esrutura de repetição/exercicio08.js"></script> -->
-   <!-- <script src="./Esrutura de repetição/exercicio09.js"></script> -->
-    <script src="./Arrey/arrey.js"></script>
-
+    <!-- <script src="Esrutura de repetição/for.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/exercicio02.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/exercicio03.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/while.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/exercicio05.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/exercicio06.js"></script>-->
+    <!-- <script src="./Esrutura de repetição/exercicio07.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/exercicio08.js"></script> -->
+    <!-- <script src="./Esrutura de repetição/exercicio09.js"></script> -->
+    <!-- <script src="./Arrey/arrey.js"></script> -->
+     <!-- <script src="Função/funcao.js"></script> -->
+      <!-- <script src="Função/menu.js"></script> -->
+       <script src="Objeto/objeto.js"></script>
 
 </head>
 
@@ -26,4 +29,5 @@
     <h1>Hello World!</h1>
     <p>Bem-vindo, ao mundo!</p>
 </body>
+
 </html>
