Iniciado DOM - Manipulação

--- a/index.html
+++ b/index.html
@@ -19,15 +19,28 @@
     <!-- <script src="./Esrutura de repetição/exercicio08.js"></script> -->
     <!-- <script src="./Esrutura de repetição/exercicio09.js"></script> -->
     <!-- <script src="./Arrey/arrey.js"></script> -->
-     <!-- <script src="Função/funcao.js"></script> -->
-      <!-- <script src="Função/menu.js"></script> -->
-       <script src="Objeto/objeto.js"></script>
+    <!-- <script src="Função/funcao.js"></script> -->
+    <!-- <script src="Função/menu.js"></script> -->
+    <!-- <script src="Objeto/objeto.js"></script> -->
+    <!-- <script src="DOM/dom.js" defer></script> -->
+     <script src="DOM/events.js" defer></script>
 
 </head>
 
 <body>
     <h1>Hello World!</h1>
-    <p>Bem-vindo, ao mundo!</p>
+    <p id="">Bem-vindo, ao mundo!</p>
+    <ul>
+        <li id="tecnica">Leandra</li>
+        <li class="Jogador">Diogo</li>
+        <li class="Jogador">Eduardo</li>
+        <li class="Jogador">Kaique</li>
+        <li class="Jogador">Murilo</li>
+        <li class="Jogador">Enzo</li>
+        <li class="Jogador">Guilherme</li>
+    </ul>
+
+    <button type="button" id="btn">Mudar a cor de fundo</button>
 </body>
 
 </html>
